fixed that weird looking pricing page top section and fiddled around with spacing on pricing page

--- a/css/pricing.css
+++ b/css/pricing.css
@@ -9,10 +9,6 @@
   gap: 40px;
 }
 
-#benefits {
-  background: var(--lightBgColor);
-}
-
 #faq {
   padding-bottom: 100px !important;
 }
